# mmio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: formatting.yml  main_ci.yml
include/mmio/: mmio.hpp
src/: CMakeLists.txt
src/mmio/: mmio.cpp
tests/: CMakeLists.txt
tests/mmio/: mmio.test.cpp
